--- a/web_classification/configs/deployment_config.json
+++ b/web_classification/configs/deployment_config.json
@@ -6,9 +6,9 @@
             "ENDPOINT_NAME": "",
             "ENDPOINT_DESC": "A Managed compute based endpoint serving a flow for web classification",
             "DEPLOYMENT_DESC": "prompt flow deployment",
-            "PRIOR_DEPLOYMENT_NAME": "",
+            "PRIOR_DEPLOYMENT_NAME": "llmops-pf-deployment-web-classification-endpoint",
             "PRIOR_DEPLOYMENT_TRAFFIC_ALLOCATION": "0",
-            "CURRENT_DEPLOYMENT_NAME": "llmops-pf-deployment",
+            "CURRENT_DEPLOYMENT_NAME": "llmops-pf-deployment-web-classification",
             "CURRENT_DEPLOYMENT_TRAFFIC_ALLOCATION": "100",
             "DEPLOYMENT_VM_SIZE": "Standard_E16s_v3",
             "DEPLOYMENT_INSTANCE_COUNT": 1,
