--- a/web_classification/configs/deployment_config.json
+++ b/web_classification/configs/deployment_config.json
@@ -2,7 +2,7 @@
     "azure_managed_endpoint":[
         {
             "ENV_NAME": "dev",
-            "TEST_FILE_PATH": "web_classification/sample-request.json",
+            "TEST_FILE_PATH": "sample-request.json",
             "ENDPOINT_NAME": "",
             "ENDPOINT_DESC": "A Managed compute based endpoint serving a flow for web classification",
             "DEPLOYMENT_DESC": "prompt flow deployment",
